changed package.json keyword to "gruntplugin"

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "url": "https://github.com/ChrisWren/grunt-requirejs-config.git"
   },
   "keywords": [
-    "grunt",
-    "plugin",
+    "gruntplugin",
     "require.js",
     "config"
   ],
