--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-release": "^0.12.0",
     "grunt-simple-mocha": "~0.4.0",
     "should": "~1.2.2"
   },
